tests/snapshots/examples_fixtures/type_system__15_complete_program.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/15_complete_program.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:43:1
   |
43 | print("=== Grade Report ===")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/15_complete_program.flx:43:1
   |
43 | print("=== Grade Report ===")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:44:1
   |
44 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:45:1
   |
45 | print("Scores by student:")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E400]: MISSING EFFECT

Call to `print` requires effect `IO` in this function signature.

  --> examples/type_system/15_complete_program.flx:47:5
   |
47 |     print(report_line(p.0, p.1))
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:52:1
   |
52 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:53:1
   |
53 | print("=== Statistics ===")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:58:1
   |
58 | print("  Passing (>=60) : " + to_string(Stats.list_len(passing)))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:59:1
   |
59 | print("  Failing (<60)  : " + to_string(Stats.list_len(failing)))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:63:1
   |
63 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:64:1
   |
64 | print("=== Ranking (best to worst) ===")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E400]: MISSING EFFECT

Call to `print` requires effect `IO` in this function signature.

  --> examples/type_system/15_complete_program.flx:67:5
   |
67 |     print("  #" + to_string(pos) + "  " + p.0 + "  " + to_string(p.1))
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:73:1
   |
73 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:74:1
   |
74 | print("=== Grade Distribution ===")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:76:1
   |
76 | print("  A (4pts): " + to_string(dist.0))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:77:1
   |
77 | print("  B (3pts): " + to_string(dist.1))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:78:1
   |
78 | print("  C (2pts): " + to_string(dist.2))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:79:1
   |
79 | print("  D (1pts): " + to_string(dist.3))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:80:1
   |
80 | print("  F (0pts): " + to_string(dist.4))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:84:1
   |
84 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/15_complete_program.flx:85:1
   |
85 | print("=== GPA per Student ===")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E400]: MISSING EFFECT

Call to `print` requires effect `IO` in this function signature.

  --> examples/type_system/15_complete_program.flx:91:5
   |
91 |     print("  " + p.0 + ": " + letter + " (GPA " + to_string(gpa) + ") — " + status)
   |     ^^^^^
   |     ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.

Found 22 errors.
== stdout ==
<not executed>
